fixed navlink's visibility when scrolling off the home section

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -24,9 +24,3 @@ body {
   color: var(--foreground);
   font-family: Arial, Helvetica, sans-serif;
 }
-
-@layer base {
-  html {
-    @apply scroll-smooth;
-  }
-}
